cmake --install: Respect CMAKE_DEFAULT_CONFIGS

When `cmake --install` is run with no `--config` passed, use
`CMAKE_DEFAULT_CONFIGS` to determine which config(s) to install.

Fixes: #21475