Source/cmGlobalNinjaGenerator.h
@@ -466,7 +466,7 @@ public:
 
   std::set<std::string> GetCrossConfigs(const std::string& config) const;
 
-  const std::set<std::string>& GetDefaultConfigs() const
+  const std::set<std::string>& GetDefaultConfigs() const override
   {
     return this->DefaultConfigs;
   }
